update to curr state

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -12,29 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading embeddings from dat/annoy directory...\n",
-      "EMBEDDINGS:\n",
-      " dict_keys(['word2vec-slim', 'poetry', 'australia', 'joyce', 'oneb', 'dickens', 'law', 'joyce-dep', 'merge-science-big', 'darwin100dep', 'darwin_0', 'darwin', 'darwin_1', 'gandhi', 'darwin_3', 'nyt-science', 'darwin_2', 'darwin_4', 'aretha', 'sherlock', 'arxiv_abs', 'merge-science-small', 'glove-slim'])\n",
-      "VOCAB:\n",
-      " dict_keys(['glove-slim', 'foodreviews', 'oneb', 'poetry', 'gandhi', 'nyt-science', 'darwin', 'joyce-dep', 'darwin_1', 'aretha', 'darwin_3', 'darwin100dep', 'dickens', 'merge-science-small', 'arxiv_abs', 'darwin_2', 'joyce', 'word2vec-slim', 'australia', 'darwin_0', 'law', 'darwin_4', 'sherlock', 'merge-science-big'])\n",
-      "PART OF SPEECH:\n",
-      " dict_keys(['merge-science-big', 'dickens', 'joyce', 'poetry', 'merge-science-small', 'arxiv_abs', 'sherlock', 'nyt-science', 'darwin', 'gandhi'])\n",
-      "Ready!\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gensim\n",
     "import numpy as np\n",
+    "import os\n",
     "import pickle\n",
     "import random\n",
     "import re\n",
@@ -48,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +50,7 @@
        " 'extend']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,26 +61,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ". . . . "
+      ". . . . . "
      ]
     }
    ],
    "source": [
     "base_path = 'dat/vecs/'\n",
-    "embd_nmes = ['glove-slim', 'word2vec-slim', 'arxiv_abs', 'nyt-science']\n",
+    "embd_nmes = ['glove-slim', 'word2vec-slim', 'arxiv_abs', 'nyt-science', 'arxiv_abs_lemma']\n",
     "embd_vecs = []\n",
     "for nme in embd_nmes:\n",
     "    fle = base_path + nme + '.txt'\n",
     "    vec = gensim.models.KeyedVectors.load_word2vec_format(fle)\n",
     "    embd_vecs.append(vec)\n",
     "    print('.', end=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get size of all corpuses\n",
+    "\n",
+    "corpus | words\n",
+    "----- | ------\n",
+    "oneb | 768,648,884 words\n",
+    "arxiv-category-corpora | 546,695,438 words\n",
+    " food | 47,184,823 words\n",
+    " nyt-science | 31,375,098 words\n",
+    "scifi | 26,656,594 words\n",
+    " gandhi | 13,450,085 words\n",
+    "  arxiv_abs | 6,220,371 words\n",
+    "  dickens | 6,033,912 words\n",
+    "   darwin | 3,088,979 words\n",
+    "   law | 2,721,025 words\n",
+    "    poetry | 1,302,139 words\n",
+    "sherlock | 857,351 words\n",
+    " joyce | 432,819 words\n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dat/corpora/sherlock\n",
+      "sherlock : 857351 words\n",
+      "dat/corpora/gandhi\n",
+      "gandhi : 13450085 words\n",
+      "dat/corpora/dickens\n",
+      "dickens : 6033912 words\n",
+      "dat/corpora/merge-science-big\n",
+      "merge-science-big : 34583381 words\n",
+      "dat/corpora/law\n",
+      "law : 2721025 words\n",
+      "dat/corpora/nyt\n",
+      "nyt : 36832892 words\n",
+      "dat/corpora/merge-science-small\n",
+      "merge-science-small : 14554458 words\n",
+      "dat/corpora/poetry\n",
+      "poetry : 1302139 words\n",
+      "dat/corpora/nyt-science\n",
+      "nyt-science : 31375098 words\n",
+      "dat/corpora/food\n",
+      "food : 47184823 words\n",
+      "dat/corpora/darwin\n",
+      "darwin : 3088979 words\n",
+      "dat/corpora/oneb\n",
+      "oneb : 768648884 words\n",
+      "dat/corpora/joyce\n",
+      "joyce : 432819 words\n",
+      "dat/corpora/arxiv-category-corpora-master\n",
+      "arxiv-category-corpora-master : 546695438 words\n",
+      "dat/corpora/arxiv_abs\n",
+      "arxiv_abs : 6220371 words\n"
+     ]
+    }
+   ],
+   "source": [
+    "base = 'dat/corpora/'\n",
+    "for directory in os.listdir(base):\n",
+    "    thispath = os.path.join(base, directory)\n",
+    "    if os.path.isdir(thispath):\n",
+    "        print(thispath)\n",
+    "        word_cnt = 0\n",
+    "        for fname in os.listdir(thispath):\n",
+    "            for lne in open(os.path.join(thispath, fname), errors='ignore'):\n",
+    "                word_cnt += len(lne.split(' '))\n",
+    "        print(directory, \":\", word_cnt, 'words')"
    ]
   },
   {
@@ -289,6 +352,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look at PIP loss between two embeddings for a random sample of words of *n* words."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -362,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -424,10 +494,10 @@
      "output_type": "stream",
      "text": [
       "mac thes DETER 27 entries:\n",
-      "hinder, demoralize, check, inhibit, stave off, fend off, avert, disincentivize, obstruct, stop, impede, scare off, prevent, dissuade, halt, block, foil, forestall, intimidate, daunt, hamper, put off, discourage, counteract, ward off, curb, dishearten, \n",
+      "stop, stave off, foil, dissuade, prevent, intimidate, fend off, halt, check, obstruct, forestall, disincentivize, hinder, block, demoralize, inhibit, dishearten, daunt, counteract, put off, ward off, curb, discourage, impede, hamper, avert, scare off, \n",
       "\n",
       "mob thes DETER 64 entries:\n",
-      "estop, hinder, check, disinterest, faze, bar, debar, scare, wean from, preclude, inhibit, stave off, obviate, awe, fend off, foreclose, deflect, avert, restrain, damp, turn from, quench, obstruct, frighten, keep from, repel, turn aside, disincline, overawe, shake, dampen, exclude, impede, scare off, stop, prevent, ward, turn off, dissuade, shut out, save, fend, block, blunt, prohibit, indispose, forestall, daunt, intimidate, put off, cool, distract, divert, anticipate, turn away, help, chill, discourage, forbid, keep off, ward off, disaffect, dishearten, rule out, "
+      "chill, preclude, stave off, stop, damp, turn away, distract, dissuade, prevent, forbid, intimidate, prohibit, indispose, fend off, blunt, cool, check, scare, divert, debar, keep from, obstruct, wean from, estop, dampen, restrain, disaffect, forestall, obviate, turn from, repel, deflect, foreclose, hinder, block, inhibit, dishearten, bar, ward, daunt, help, save, turn off, turn aside, anticipate, exclude, quench, put off, awe, keep off, ward off, disincline, overawe, discourage, impede, faze, frighten, disinterest, shake, fend, shut out, avert, scare off, rule out, "
      ]
     }
    ],
@@ -443,20 +513,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['glove-slim', 'word2vec-slim', 'arxiv_abs', 'nyt-science'],\n",
-       " [<gensim.models.keyedvectors.Word2VecKeyedVectors at 0x10eb5c860>,\n",
-       "  <gensim.models.keyedvectors.Word2VecKeyedVectors at 0x16dcdcc88>,\n",
-       "  <gensim.models.keyedvectors.Word2VecKeyedVectors at 0x1771f12e8>,\n",
-       "  <gensim.models.keyedvectors.Word2VecKeyedVectors at 0x17791be80>])"
+       "(['glove-slim',\n",
+       "  'word2vec-slim',\n",
+       "  'arxiv_abs',\n",
+       "  'nyt-science',\n",
+       "  'arxiv_abs_lemma'],\n",
+       " [<gensim.models.keyedvectors.Word2VecKeyedVectors at 0x10a9e6128>,\n",
+       "  <gensim.models.keyedvectors.Word2VecKeyedVectors at 0x179cd5208>,\n",
+       "  <gensim.models.keyedvectors.Word2VecKeyedVectors at 0x178215358>,\n",
+       "  <gensim.models.keyedvectors.Word2VecKeyedVectors at 0x178a45d30>,\n",
+       "  <gensim.models.keyedvectors.Word2VecKeyedVectors at 0x1803f3358>])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,47 +542,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['models', 'design', 'concept', 'prototype', 'introduced', 'example', 'type', 'developed', 'same', 'version']\n"
+      "QUERY: manage ( overlap: 0 )\n",
+      "ARXIV_ABS_LEMMA : monitor, respond, allocate, communicate, HARNESS, designer, meet, protect, understand, request, \n",
+      "THESAURUS: {'effect', 'control', 'direct', 'conduct', 'command', 'administer', 'succeed in', 'deal with', 'undertake', 'lead', 'preside over', 'do', 'bring about/off', 'engineer', 'perform', 'supervise', 'handle', 'guide', 'be at the helm of', 'carry out', 'master', 'organize', 'govern', 'superintend', 'head up', 'achieve', 'finish', 'be head of', 'contrive', 'cope with', 'run', 'oversee', 'rule', 'head', 'accomplish', 'be in charge of'}\n",
+      "\n",
+      "THESAURUS: {'bicycling', 'effect', 'keep', 'muddle through', 'operate', 'get by', 'discipline', 'make', 'pedaling', 'watch over', 'control', 'equitation', 'shape a course', 'conduct', 'dairy-farming', 'go on with', 'realize', 'administer', 'take care of', 'chicken-farming', 'consummate', 'come on', 'conn', 'succeed in', 'keep within compass', 'be such', 'play', 'exercise', 'feed', 'produce', 'stick it out', 'cycling', 'motoring', 'stand over', 'water', 'do', 'make out', 'engineer', 'tend', 'put through', 'brush', 'order', 'be so', 'supervise', 'handle', 'guide', 'captain', 'save', 'maneuver', 'negotiate', 'gnotobiotics', 'horsemanship', 'mastermind', 'put over', 'practice', 'put something aside', 'clear', 'go along', 'wield authority', 'chair', 'drench', 'head up', 'dispatch', 'officer', 'bed', 'cope with', 'manage somehow', 'curry', 'accomplish', 'employ', 'have the conn', 'cut the mustard', 'stockbreeding', 'carry through', 'tame', 'get by on', 'rub down', 'helm', 'keep at it', 'mink-ranching', 'complete', 'drive', 'never say die', 'pig-keeping', 'groom', 'train', 'knock off', 'stock raising', 'scrimp', 'milk', 'coxswain', 'manage with', 'animal rearing', 'bridle', 'scrape', 'transact', 'polish off', 'turn out', 'enforce economies', 'carry on', 'scrape along', 'scrape and save', 'make go', 'govern', 'put away', 'bring off', 'achieve', 'perform on', 'contrive', 'clear the hurdle', 'eke out', 'keep afloat', 'gentle', 'hitch', 'break', 'oversee', 'stack up', 'pull the strings', 'driving', 'execute', 'do the job', 'head', 'contend with', 'stagger', 'take the lead', 'treat', 'function', 'swing the deal', 'thremmatology', 'command', 'harness', 'enact', 'horse training', 'undertake', 'look after', 'lead', 'automobiling', 'succeed', 'animal husbandry', 'compass', 'cond', 'do with', 'fetch', 'herding', 'pilot', 'ordain', 'carry out', 'care for', 'go on', 'grazing', 'litter', 'fare', 'saddle', 'riding school', 'see to', 'swing', 'yoke', 'skimp', 'utilize', 'make use of', 'beekeeping', 'get along', 'take command', 'breeding', 'steer', 'economize', 'chart a course', 'busing', 'cattle-ranching', 'makeshift', 'worry along', 'stick to it', 'make ends meet', 'make the grade', 'call the signals', 'survive', 'dispose of', 'do the trick', 'get along on', 'skipper', 'work out', 'zootechny', 'bed down', 'direct', 'be master', 'bring about', 'see it through', 'steward', 'use', 'exert', 'turn the trick', 'make it', 'wield', 'prescribe', 'rule over', 'sheepherding', 'come along', 'motorcycling', 'deal with', 'attain', 'be responsible for', 'fodder', 'cope', 'discharge', 'hang in', 'make the rules', 'preside over', 'persevere', 'regulate', 'biking', 'perform', 'hang tough', 'manipulate', 'effectuate', 'quarterback', 'riding', 'subsist', 'lead on', 'administrate', 'fulfill', 'zootechnics', 'husband', 'dressage', 'navigate', 'superintend', 'work', 'get on', 'make do', 'persist', 'come through', 'bee culture', 'hack it', 'ply', 'shape up', 'run', 'horseback riding', 'currycomb', 'come out', 'dominate'}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "4"
+       "0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "key = 'model'\n",
-    "response = [w for w, d in embd_vecs[0].most_similar(key, topn=10)]\n",
-    "print(response)\n",
+    "key = 'manage'\n",
+    "embnme = 'arxiv_abs_lemma'\n",
+    "response = simple_lookup(key, 'VERB', embkey=embnme, nopos=True)['words']  # no POS for arxiv_abs anyway\n",
+    "print('QUERY:', key, '( overlap:', get_thes_count(key, response, mac), ')')\n",
+    "print(embnme.upper(), ':', end=' ')\n",
+    "for w in response:\n",
+    "    if w in mac[key].union(mob[key]):\n",
+    "        print(w.upper(), end=', ')\n",
+    "    else:\n",
+    "        print(w, end=', ')\n",
+    "print('\\nTHESAURUS:', mac[key])\n",
+    "print('\\nTHESAURUS:', mob[key])\n",
     "get_thes_count(key, response, mac)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0., 4., 0., 1., 6., 4., 0., 1., 1., 0., 1., 3., 0., 2., 4., 0., 5.,\n",
-       "       0., 2., 1., 1., 3., 3., 0., 0., 1., 0., 1., 2., 0.])"
+       "array([7., 0., 1., 9., 2., 0., 5., 0., 0., 3., 4., 2., 8., 2., 1., 1., 4.,\n",
+       "       1., 4., 5., 3., 1., 4., 1., 2., 2., 1., 2., 1., 3.])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,12 +605,13 @@
     "    \"\"\"Return vocab of gensim emb object as set.\"\"\"\n",
     "    return set(emb.vocab.keys())\n",
     "\n",
-    "def get_syn_meas(emb, thes, n=30):\n",
+    "def get_syn_meas(emb, thes, n=30, nn=10):\n",
     "    \"\"\"Randomly select n words from emb and return array of get_thes_count from top 10.\n",
     "    \n",
     "    :param emb: gensim emb ob\n",
     "    :param thes: dict of words to list of syn\n",
     "    :param n: number of words from emb vocab to randomly sample\n",
+    "    :param nn: number of nearest neighbors to consider\n",
     "    :return counts: np array\n",
     "    \"\"\"\n",
     "    vocab = list(get_vocab(emb))\n",
@@ -531,7 +620,7 @@
     "    for i, w in enumerate(words):\n",
     "        while w not in thes:\n",
     "            w = random.sample(vocab, 1)[0]\n",
-    "        response = [w for w, d in emb.most_similar(w, topn=10)]\n",
+    "        response = [w for w, d in emb.most_similar(w, topn=20)]\n",
     "        counts[i] = get_thes_count(w, response, thes)\n",
     "    return counts\n",
     "\n",
@@ -571,7 +660,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "'poetry', 'australia', 'joyce', 'oneb', 'dickens', 'law', 'joyce-dep', 'merge-science-big', 'darwin100dep', 'darwin_0', 'darwin', 'darwin_1', 'gandhi', 'darwin_3', 'nyt-science', 'darwin_2', 'darwin_4', 'aretha', 'sherlock', 'arxiv_abs', 'merge-science-small', 'glove-slim"
+    "### Is distance a measure of goodness? --> NO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['glove-slim', 'word2vec-slim', 'arxiv_abs', 'nyt-science', 'arxiv_abs_lemma']\n",
+      "\n",
+      "\n",
+      " DESIGN\n",
+      "develop (0.60), devise (0.58), tailor (0.56), create (0.53), construct (0.53), implement (0.50), engineer (0.49), specialize (0.47), employ (0.47), designing (0.46), \n",
+      "\n",
+      " FUNCTIONALITY\n",
+      "ethic (0.65), stakeholder (0.64), infrastructure (0.63), assistance (0.61), ecosystem (0.61), edward (0.60), automation (0.60), appraisal (0.60), functioning (0.60), platform (0.60), \n",
+      "\n",
+      " INSTRUMENTATION\n",
+      "technologies (0.80), ehrs (0.80), cosmology (0.79), malaysia (0.79), japan (0.79), corporate (0.79), semiconductor (0.78), nsf (0.78), telemonitoring (0.78), usc (0.78), "
+     ]
+    }
+   ],
+   "source": [
+    "# for emb, nme in zip(embd_vecs, embd_nmes):\n",
+    "print(embd_nmes)\n",
+    "words = ['design', 'functionality', 'instrumentation']\n",
+    "emb = embd_vecs[-1]\n",
+    "for w in words:\n",
+    "    print('\\n\\n', w.upper())\n",
+    "    for t in emb.most_similar(w):\n",
+    "        print('{} ({:.2f}),'.format(t[0], t[1]), end=' ')"
    ]
   },
   {
