--- a/notebooks/stability_of_embeddings.ipynb
+++ b/notebooks/stability_of_embeddings.ipynb
@@ -34,13 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gensim\n",
     "import numpy as np\n",
     "import os\n",
+    "import random\n",
     "import string\n",
     "\n",
     "from time import time"
@@ -57,29 +58,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ". . . . . done\n",
-      "darwin 0.5829170829170829\n",
-      "observations 0.7727272727272728\n",
-      "books 0.18464052287581703\n",
-      "open 0.6242091242091241\n",
-      "variation 0.5957375957375957\n",
-      "cat 0.5514152514152514\n",
-      "facts 0.8575757575757577\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/Users/katy/Documents/Grad/thesaurusx/env/lib/python3.6/site-packages/gensim/matutils.py:737: FutureWarning: Conversion of the second argument of issubdtype from `int` to `np.signedinteger` is deprecated. In future, it will be treated as `np.int64 == np.dtype(int).type`.\n",
       "  if np.issubdtype(vec.dtype, np.int):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "darwin 0.3127917833800187\n",
+      "observations 0.8787878787878789\n",
+      "books 0.5445665445665445\n",
+      "open 0.5384615384615384\n",
+      "variation 0.7676767676767677\n",
+      "cat 0.6666666666666666\n",
+      "facts 0.6744366744366744\n"
      ]
     }
    ],
@@ -123,12 +123,153 @@
     "    print('done')\n",
     "    return vectors\n",
     "\n",
-    "darwin = load_emb(['../dat/vecs/{}_{}.txt'.format('darwin', i) for i in range(5)])\n",
+    "# darwin = load_emb(['../dat/vecs/{}_{}.txt'.format('darwin', i) for i in range(5)])\n",
+    "# oneb = load_emb(['../dat/vecs/{}_{}.txt'.format('oneb', i) for i in range(3)])\n",
     "keystones = ['darwin', 'observations', 'books', 'open', 'variation', 'cat', 'facts']\n",
     "\n",
-    "jac_sims = get_jaccard(darwin, keystones)\n",
+    "jac_sims = get_jaccard(oneb, keystones)\n",
     "for key in jac_sims:\n",
     "    print(key, jac_sims[key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ". . . . done\n"
+     ]
+    }
+   ],
+   "source": [
+    "scifi = load_emb(['../dat/vecs/{}_{}.txt'.format('scifi_100kb', i) for i in range(4)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['prank', 'crowded', 'trappings', 'ceasefire', 'demonstrate', 'hymn', 'maniac', 'beginning', 'plenty', 'preconceived']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "12440"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def load_macthes(filepath='../dat/other/mac_thes.txt'):\n",
+    "    \"\"\"Return dict of word: set of synonyms.\n",
+    "    \n",
+    "    Thsi thesaurus is split by pos; ignore for now and throw all\n",
+    "    synoyms into same entry.\n",
+    "    \"\"\"\n",
+    "    thes = dict()\n",
+    "    with open(filepath, 'r') as fle:\n",
+    "        for line in fle:\n",
+    "            entry, words = line.strip('\\n').split(':')\n",
+    "            key, pos = entry.split(' ')\n",
+    "            words = words.split(', ')\n",
+    "            if key in thes:\n",
+    "                thes[key].update(words)\n",
+    "            else:\n",
+    "                thes[key] = set(words)\n",
+    "    return thes\n",
+    "\n",
+    "ogthes = load_macthes()\n",
+    "thes = {}\n",
+    "for k in ogthes:\n",
+    "    if '-' in k:\n",
+    "        w = k.replace('-', '')\n",
+    "        thes[w] = ogthes[k]\n",
+    "    else:\n",
+    "        thes[k] = ogthes[k]\n",
+    "\n",
+    "shared_vocab = set.intersection(set(thes.keys()), get_vocab(scifi[0]))\n",
+    "print(list(shared_vocab)[:10])\n",
+    "len(shared_vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5000\n"
+     ]
+    }
+   ],
+   "source": [
+    "local_vocab = random.sample(shared_vocab, 5000)\n",
+    "l = len(local_vocab)\n",
+    "print(l)\n",
+    "jac_sims = get_jaccard(scifi, list(local_vocab))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.3308662354501364, 0.23359305955766385)"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jac_sims_array = np.zeros(l)\n",
+    "for i, k in enumerate(jac_sims.keys()):\n",
+    "    jac_sims_array[i] = jac_sims[k]\n",
+    "np.mean(jac_sims_array), np.std(jac_sims_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('gushing,', False)"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "in_vocab = True\n",
+    "while in_vocab:\n",
+    "    w = random.choice(list(thes.keys()))\n",
+    "    in_vocab = w in oneb[0].vocab\n",
+    "w, w in oneb[0].vocab"
    ]
   },
   {
@@ -182,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,8 +331,10 @@
     "    \"\"\"Return vocab of gensim emb object as set.\"\"\"\n",
     "    return set(emb.vocab.keys())\n",
     "\n",
-    "def compare_jaccard(emb1, emb2):\n",
+    "def compare_jaccard(emb1, emb2, thes=None):\n",
     "    \"\"\"Return array of jaccard sim for all shared vocab in two sets of emb fles.\n",
+    "    \n",
+    "    If thes is included, only do words in the thes.\n",
     "    \n",
     "    vocab in all emb1 embeddings should be the same\n",
     "    vocab in all emb2 embeddings should be the same\n",
@@ -200,7 +343,10 @@
     "    :param emb2: like above, but different algo (same data! diff runs)\n",
     "    :return: array of jaccard sim for each word in shared vocab\n",
     "    \"\"\"\n",
-    "    shared = list(set.intersection(*[get_vocab(emb1[0]), get_vocab(emb2[0])]))\n",
+    "    if thes:\n",
+    "        shared = list(set.intersection(*[get_vocab(emb1[0]), get_vocab(emb2[0]), set(thes.keys())]))\n",
+    "    else:\n",
+    "        shared = list(set.intersection(*[get_vocab(emb1[0]), get_vocab(emb2[0])]))\n",
     "    print('shared vocab', len(shared))\n",
     "    jac1_d = get_jaccard(emb1, shared)\n",
     "    jac2_d = get_jaccard(emb2, shared)\n",
@@ -215,26 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "shared vocab 4844\n",
-      "0.048 (0.099), 0.057 (0.116)\n"
-     ]
-    }
-   ],
-   "source": [
-    "reg, lem = compare_jaccard(joyce, joyce_lemma)\n",
-    "print('{:.3f} ({:.3f}), {:.3f} ({:.3f})'.format(np.mean(reg), np.std(reg), np.mean(lem), np.std(lem)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -249,6 +376,25 @@
    "source": [
     "arxiv = load_emb(['../dat/vecs/{}_{}.txt'.format('arxiv_abs', i) for i in range(3)])\n",
     "arxiv_lemma = load_emb(['../dat/vecs/{}_{}.txt'.format('arxiv_abs_lemma', i) for i in range(3)])      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shared vocab 4854\n",
+      "0.317 (0.265), 0.372 (0.262)\n"
+     ]
+    }
+   ],
+   "source": [
+    "reg, lem = compare_jaccard(arxiv, arxiv_lemma, thes)\n",
+    "print('{:.3f} ({:.3f}), {:.3f} ({:.3f})'.format(np.mean(reg), np.std(reg), np.mean(lem), np.std(lem)))"
    ]
   },
   {
